<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite1"
    tools:context=".views.EmailValidation_SignUp_Activity">

    <ImageView
        android:id="@+id/imageView_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        app:tint="@color/colorText"
        app:srcCompat="@drawable/round_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/imgv"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/ic_login_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite2"
        app:cardElevation="20dp"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp">

        <LinearLayout
            android:id="@+id/linearPinView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="32dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codeTv"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:inputType="number"
                android:textColor="@color/colorText"
                app:itemCount="6"
                app:itemRadius="4dp"
                app:itemSpacing="6dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                style="@style/PinWidget.PinView"
                app:lineWidth="2dp"
                app:itemHeight="36dp"
                app:itemWidth="36dp"
                app:lineColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="32dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordEdtHint"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <EditText
                    android:id="@+id/passwordEdt"
                    android:drawableStart="@drawable/password"
                    android:textColor="@color/colorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:hint="@string/newPasswordEdtHint"
                    android:autofillHints="@string/passwordEdtHint"
                    android:inputType="textPassword"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:background="@null"
                    android:drawablePadding="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".75dp"
                android:background="@android:color/darker_gray"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/PassErrorTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/errorTv"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_marginTop="7dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="11sp"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_below="@id/card"
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_gradiant"
        android:clickable="true"
        android:focusable="true"
        android:contextClickable="true"
        android:text="@string/confirmBtn"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:visibility="visible"/>

    <Button
        android:layout_below="@id/card"
        android:id="@+id/changePassBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_gradiant"
        android:clickable="true"
        android:focusable="true"
        android:contextClickable="true"
        android:text="@string/changePasswordBtn"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/illustration" />

</RelativeLayout>